--- a/MABITE.html
+++ b/MABITE.html
@@ -9,20 +9,43 @@
 
 
     <style>
-        {
+        body {
+            background-color: #B5BADF;
+        }
 
+        .image_SAM {
+            position: absolute;
+            width: 150px;
+            height: 150px;
+        }
 
+        .image_SIO {
+            position: absolute;
+            width: 150px;
+            height: 150px;
+            left: 1500px;
         }
     </style>
 
-
+    
 
 
 </head>
 
-<body style="background-color:#B5BADF;">
+<body>
+    <img src="undraw_Female_avatar_re_l6cx.png" alt="Girl in a cercle">
+    <div class="image_SAM">
+        <img src="undraw_Female_avatar_re_l6cx.png" alt="Girl in a cercle">
+        <img src="undraw_Female_avatar_re_l6cx.png" alt="Girl in a cercle">
+        <img src="undraw_Female_avatar_re_l6cx.png" alt="Girl in a cercle">
+    </div>
 
-    
+    <div class="image_SIO">
+        <img src="undraw_Male_avatar_re_y880.png" alt="Boy in a cercle">
+        <img src="undraw_Male_avatar_re_y880.png" alt="Boy in a cercle">
+        <img src="undraw_Male_avatar_re_y880.png" alt="Boy in a cercle">
+    </div>
 </body>
 
+</html>
 </html>
