--- a/index.html
+++ b/index.html
@@ -16,12 +16,38 @@
 <body>
    
     <div class="barre">
-        <a href="#"><img src="./assets/Barre/Icon_maps.png" alt="Icon maps"> Maps </a>
-        <a href="#"><img src="./assets/Barre/Icon_presentations.png" alt="Icon Presentations"> Presentations </a>
-        <a href="#" class="accueil"><img src="./assets/Barre/Icon_accueil.png" alt="Icon Ecran d'acc"> Ecran d'accueil </a>
-        <a href="#"><img src="./assets/Barre/Icon_equipes.png" alt="Icon maps"> Equipes </a>
-        <a href="#"><img src="./assets/Barre/Icon_reseaux_sociaux.png" alt="Icon maps"> Reseaux Sociaux </a>
+        <span href="#" class="toggle">Ouvrir le menu</span>
+        <a href="#"><img src="./assets/Barre/map.png" alt="Icon maps"><span>Maps</span> </a>
+        <a href="#"><img src="./assets/Barre/quiz.png" alt="Icon Presentations"> <span>Presentations</span> </a>
+        <a href="#" class="accueil"><img src="./assets/Barre/home.png" alt="Icon Ecran d'acc"> Ecran d'accueil</span> </a>
+        <a href="#"><img src="./assets/Barre/diversity.png" alt="Icon maps"> <span>Equipes</span> </a>
+        <a href="#"><img src="./assets/Barre/share.png" alt="Icon maps"> <span>Reseaux Sociaux</span> </a>
     </div>
 
+
+    <script>
+        // permet de faire fonctionner le bouton toggle de la barre de navigation
+        const toggle = document.querySelector('.toggle');
+        const barre = document.querySelector('.barre');
+        toggle.addEventListener('click', () => {
+            if (barre.classList.contains('showMenu')) {
+                barre.classList.remove('showMenu');
+                toggle.innerHTML = 'Ouvrir le menu';
+            } else {
+                barre.classList.add('showMenu');
+                toggle.innerHTML = 'Fermer le menu';
+            }
+        });
+
+        // fermeture du menu en cliquant sur un lien
+        const linksMenu = document.querySelectorAll('.barre a');
+        linksMenu.forEach(link => {
+            link.addEventListener('click', () => {
+                barre.classList.remove('showMenu');
+                toggle.innerHTML = 'Ouvrir le menu';
+            });
+        });
+
+    </script>
 </body>
 </html>
