--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span href="#" class="toggle">Ouvrir le menu</span>
         <a href="#"><img src="./assets/Barre/map.png" alt="Icon maps"><span>Maps</span> </a>
         <a href="#"><img src="./assets/Barre/quiz.png" alt="Icon Presentations"> <span>Presentations</span> </a>
-        <a href="#" class="accueil"><img src="./assets/Barre/home.png" alt="Icon Ecran d'acc"> Ecran d'accueil</span> </a>
+        <a href="#" class="accueil"><img src="./assets/Barre/home.png" alt="Icon Ecran d'acc"> <span>Ecran d'accueil</span> </a>
         <a href="#"><img src="./assets/Barre/diversity.png" alt="Icon maps"> <span>Equipes</span> </a>
         <a href="#"><img src="./assets/Barre/share.png" alt="Icon maps"> <span>Reseaux Sociaux</span> </a>
     </div>
