--- a/Maquette2/test.html
+++ b/Maquette2/test.html
@@ -73,8 +73,8 @@
 <body>
 
     <div class="menu">
-        note : rajouter logo 
-        <a href="#"><img src="" alt="logo"></a>
+
+        <a href="#"><img src="logo.png" alt="logo"></a>
         <a href="#">Maps</a>
         <a href="#">Presentation</a>
         <a href="#">Ecran D'accueil</a>
