mise en forme de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
         <a href="#"><img src="./assets/Barre/share.png" alt="Icon maps"> <span>Reseaux Sociaux</span> </a>
     </div>
 
+    <div class="main">
+        <!-- carte -->
+        <div class="carte">
+            <div class="carteBox">
+                <a href="#" id="fullscreen"></a>
+            </div>
+        </div>
+    </div>
 
-    <?-- carte -->
-    <div class="carte">
-    <div class="carteBox">
-        <a href="#" id="fullscreen"></a>
-    </div>
-    </div>
+
 
     <script>
         // permet de faire fonctionner le bouton toggle de la barre de navigation
@@ -62,4 +65,5 @@
 
     <script src="./assets/scripts/carte.js"></script>
 </body>
+
 </html>
