--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link rel="stylesheet" href="./css/Barre.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/carte.css">
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+        integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+        integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
+    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css'
+        rel='stylesheet' />
     <title>Projet</title>
 </head>
 
@@ -30,8 +38,7 @@
     <div class="main">
         <!-- carte -->
         <div class="carte">
-            <div class="carteBox">
-                <a href="#" id="fullscreen"></a>
+            <div id="map" class="carteBox">
             </div>
         </div>
     </div>
@@ -46,7 +53,7 @@
             if (barre.classList.contains('showMenu')) {
                 barre.classList.remove('showMenu');
                 toggle.innerHTML = 'Ouvrir le menu';
-                
+
             } else {
                 barre.classList.add('showMenu');
                 toggle.innerHTML = 'Fermer le menu';
