gros avancement sur la route

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/Barre.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/carte.css">
+    <link rel="stylesheet" href="./css/route.css">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
         integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
@@ -41,6 +42,97 @@
             <div id="map" class="carteBox">
             </div>
         </div>
+
+
+        <div class="fond_route">
+            <div class="route">
+                <div class="ligne">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+            </div>
+
+
+
+            <div class="arrets">
+                <div class="arrets_range">
+                    <div class="arret">
+                        <h2>
+                            Sières
+                        </h2>
+                        <time>
+                            18:00
+                        </time>
+                    </div>
+                    <div class="arret">
+                        <h2>
+                            Audinac-les-Bains
+                        </h2>
+                        <time>
+                            20:00
+                        </time>
+                    </div>
+
+                </div>
+                <div class="arrets_range">
+                    <div class="arret">
+                        <h2>
+                            Saint-Lizier
+                        </h2>
+                        <time>
+                            10:00
+                        </time>
+                    </div>
+                    <div class="arret">
+                        <h2>
+                            Saint-Girons
+                        </h2>
+                        <time>
+                            9:00
+                        </time>
+                    </div>
+
+                </div>
+                <div class="arrets_range">
+                    <div class="current_arret">
+                        <h2>
+                            Plaine d'Eycheil
+                        </h2>
+                        <time>
+                            8:00
+                        </time>
+                    </div>
+                    <div class="arret">
+                        <h2>
+                            Montjoie-en-couserans
+                        </h2>
+                        <time>
+                            7:00
+                        </time>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="bus">
+                <img src="./assets/bus.png" alt="">
+                <span>8:00</span>
+            </div>
+        </div>
+
+
+
+    </div>
     </div>
 
 
