--- a/index.html
+++ b/index.html
@@ -31,24 +31,6 @@
 </head>
 
 <body>
-    
-    <!-- Carousel -->
-    <div class="p-carousel">
-        <div class="main-carousel" data-flickity='{ "cellAlign": "center", "wrapAround": true , "autoPlay": 3000 , "pauseAutoPlayOnHover": false }'>
-            <div class="carousel-cell"><img src="./assets/carroussel/busMedical.png"></div>
-            <div class="carousel-cell"><img src="./assets/carroussel/logo.png"></div>
-        </div>
-    </div>
-    <div class="presentation">
-        <span>Notre bus médical :
-            <ol>
-                <li>Vise à lutter contre la désertification médicale en zone rurale.</li>
-                <li>Met à disposition de la population une équipe médicale itinérante.</li>
-                <li>Il se déplace chaque semaine dans un quartier différent de la commune pour soigner sans rendez-vous.</li>
-            </ol>
-            Il arrive à 9h et stationne jusqu’à 20h sur la place de la mairie. Les consultations sont sans RDV et gratuites sur présentation de la carte vitale. 
-        </span>
-    </div>
     <div class="barre">
         <span href="#" class="toggle">Ouvrir le menu</span>
         <a href="#"><img src="./assets/Barre/map.png" alt="Icon maps"><span>Maps</span> </a>
@@ -57,6 +39,29 @@
                 d'accueil</span> </a>
         <a href="#"><img src="./assets/Barre/diversity.png" alt="Icon maps"> <span>Equipes</span> </a>
         <a href="#"><img src="./assets/Barre/share.png" alt="Icon maps"> <span>Reseaux Sociaux</span> </a>
+    </div>
+
+    <!-- Carousel -->
+    <div class="header">
+        <div class="p-carousel">
+            <div class="main-carousel"
+                data-flickity='{ "cellAlign": "center", "wrapAround": true , "autoPlay": 3000 , "pauseAutoPlayOnHover": false }'>
+                <div class="carousel-cell"><img src="./assets/carroussel/busMedical.png"></div>
+                <div class="carousel-cell"><img src="./assets/carroussel/logo.png"></div>
+            </div>
+        </div>
+        <div class="presentation">
+            <span>Notre bus médical :
+                <ol>
+                    <li>Vise à lutter contre la désertification médicale en zone rurale.</li>
+                    <li>Met à disposition de la population une équipe médicale itinérante.</li>
+                    <li>Il se déplace chaque semaine dans un quartier différent de la commune pour soigner sans
+                        rendez-vous.</li>
+                </ol>
+                Il arrive à 9h et stationne jusqu’à 20h sur la place de la mairie. Les consultations sont sans RDV et
+                gratuites sur présentation de la carte vitale.
+            </span>
+        </div>
     </div>
 
     <div class="main">
