--- a/footer.html
+++ b/footer.html
@@ -33,11 +33,11 @@
 </head>
 
 <body>
-    <img src="undraw_Female_avatar_re_l6cx.png" alt="Girl in a cercle">
+    <img src="assets/Team/SAM1.png" alt="Girl in a cercle">
     <div class="image_SAM">
-        <img src="undraw_Female_avatar_re_l6cx.png" alt="Girl in a cercle">
-        <img src="undraw_Female_avatar_re_l6cx.png" alt="Girl in a cercle">
-        <img src="undraw_Female_avatar_re_l6cx.png" alt="Girl in a cercle">
+        <img src="assets/Team/SAM2.png" alt="Girl in a cercle">
+        <img src="assets/Team/SAM3.png" alt="Girl in a cercle">
+        <img src="assets/Team/SAM4.png" alt="Girl in a cercle">
     </div>
 
     <div class="image_SIO">
