--- a/footer.html
+++ b/footer.html
@@ -41,9 +41,9 @@
     </div>
 
     <div class="image_SIO">
-        <img src="undraw_Male_avatar_re_y880.png" alt="Boy in a cercle">
-        <img src="undraw_Male_avatar_re_y880.png" alt="Boy in a cercle">
-        <img src="undraw_Male_avatar_re_y880.png" alt="Boy in a cercle">
+        <img src="assets/Team/SIO1.png" alt="Boy in a cercle">
+        <img src="assets/Team/SIO2.png" alt="Boy in a cercle">
+        <img src="assets/Team/SIO3.png" alt="Boy in a cercle">
     </div>
 </body>
 
