Ajout presentation+ titre

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
         <a href="#"><img src="./assets/Barre/share.png" alt="Icon maps"> <span>Reseaux Sociaux</span> </a>
     </div>
 
+    <div class="titre">
+        <span>Le bus médical</span>
+    </div>
+    <div class="slogan">
+        <span>Votre médecin a porté de main</span>
+    </div>
+
     <!-- Carousel -->
     <div class="header">
         <div class="p-carousel">
@@ -51,7 +58,8 @@
             </div>
         </div>
         <div class="presentation">
-            <span>Notre bus médical :
+            <span><strong>Le bus médical : </strong> Pourquoi ? Parce qu’aujourd’hui obtenir un rendez-vous avec un généraliste c’est très compliqué
+
                 <ol>
                     <li>Vise à lutter contre la désertification médicale en zone rurale.</li>
                     <li>Met à disposition de la population une équipe médicale itinérante.</li>
