ajout du footer dans le main

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./css/route.css">
     <link rel="stylesheet" href="./css/caroussel.css">
     <link rel="stylesheet" href="./css/presentation.css">
+    <link rel="stylesheet" href="./css/footer.css">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
         integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
@@ -60,12 +61,12 @@
         <div class="presentation">
             <span><strong>Le bus médical : </strong> Pourquoi ? Parce qu’aujourd’hui obtenir un rendez-vous avec un généraliste c’est très compliqué
 
-                <ol>
+                <ul>
                     <li>Vise à lutter contre la désertification médicale en zone rurale.</li>
                     <li>Met à disposition de la population une équipe médicale itinérante.</li>
                     <li>Il se déplace chaque semaine dans un quartier différent de la commune pour soigner sans
                         rendez-vous.</li>
-                </ol>
+                </ul>
                 Il arrive à 9h et stationne jusqu’à 20h sur la place de la mairie. Les consultations sont sans RDV et
                 gratuites sur présentation de la carte vitale.
             </span>
@@ -169,6 +170,23 @@
 
 
     </div>
+    </div>
+
+    <div class="photo">
+        <div class="image_SAM"> 
+            <div><img src="assets/Team/SAM1.png" alt="Girl in a cercle"><p> Chef de Projet : Célia </p></div>
+            <div><img src="assets/Team/SAM2.png" alt="Girl in a cercle"><p> Collaboratrice : Chloé </p></div>
+            <div><img src="assets/Team/SAM3.png" alt="Girl in a cercle"><p> Collaboratrice : Boueni </p></div>
+            <div><img src="assets/Team/SAM4.png" alt="Girl in a cercle"><p> Collaboratrice : Amandine </p></div>
+
+        </div>
+
+        <div class="image_SIO">
+            <div><img src="assets/Team/SIO1.png" alt="Boy in a cercle"><p> Chef de Projet : José </p></div>
+            <div><img src="assets/Team/SIO2.png" alt="Boy in a cercle"><p> Collaborateur : Nicolas </p></div>
+            <div><img src="assets/Team/SIO3.png" alt="Boy in a cercle"><p> Collaborateur : Antoine </p></div>
+
+        </div>
     </div>
 
 
