Titre + changement des heurs en jour dans la route

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         <span>Votre médecin a porté de main</span>
     </div>
 
-    <!-- Carousel -->
+    <!--En tete de page-->
     <div class="header">
+        <!-- Carousel -->
         <div class="p-carousel">
             <div class="main-carousel"
                 data-flickity='{ "cellAlign": "center", "wrapAround": true , "autoPlay": 3000 , "pauseAutoPlayOnHover": false }'>
@@ -58,6 +59,7 @@
                 <div class="carousel-cell"><img src="./assets/carroussel/logo.png"></div>
             </div>
         </div>
+        <!--Presentation du Site-->
         <div class="presentation">
             <span><strong>Le bus médical : </strong> Pourquoi ? Parce qu’aujourd’hui obtenir un rendez-vous avec un généraliste c’est très compliqué
 
@@ -73,7 +75,12 @@
         </div>
     </div>
 
+    <div class="titre">
+    <strong>Information</strong>
+    </div>
+
     <div class="main">
+        
         <!-- carte -->
         <div class="carte">
             <div id="map" class="carteBox">
@@ -107,7 +114,7 @@
                             Sières
                         </h2>
                         <time>
-                            18:00
+                            Vendredi
                         </time>
                     </div>
                     <div class="arret">
@@ -115,7 +122,7 @@
                             Audinac-les-Bains
                         </h2>
                         <time>
-                            20:00
+                            Lundi
                         </time>
                     </div>
 
@@ -126,7 +133,7 @@
                             Saint-Lizier
                         </h2>
                         <time>
-                            10:00
+                            Mercredi
                         </time>
                     </div>
                     <div class="arret">
@@ -134,7 +141,7 @@
                             Saint-Girons
                         </h2>
                         <time>
-                            9:00
+                            jeudi
                         </time>
                     </div>
 
@@ -145,7 +152,7 @@
                             Plaine d'Eycheil
                         </h2>
                         <time>
-                            8:00
+                            Lundi
                         </time>
                     </div>
                     <div class="arret">
@@ -153,7 +160,7 @@
                             Montjoie-en-couserans
                         </h2>
                         <time>
-                            7:00
+                            Mardi
                         </time>
                     </div>
 
@@ -170,6 +177,10 @@
 
 
     </div>
+    </div>
+    
+    <div class="titre">
+        <strong>Equipe</strong>
     </div>
 
     <div class="photo">
