changement titre strong en span

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         </div>
     </div>
 
-    <div class="titre">
-    <strong>Information</strong>
-    </div>
+<div class="titre">
+    <span>Information</span>
+</div>
 
     <div class="main">
         
@@ -180,7 +180,7 @@
     </div>
     
     <div class="titre">
-        <strong>Equipe</strong>
+        <span>Equipe</span>
     </div>
 
     <div class="photo">
