qlq changement de design

--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
 <body>
     <div class="barre">
         <span href="#" class="toggle">Ouvrir le menu</span>
-        <a href="#"><img src="./assets/Barre/map.png" alt="Icon maps"><span>Maps</span> </a>
+        <a href="#map"><img src="./assets/Barre/map.png" alt="Icon maps"><span>Maps</span> </a>
         <a href="#"><img src="./assets/Barre/quiz.png" alt="Icon Presentations"> <span>Presentations</span> </a>
-        <a href="#" class="accueil"><img src="./assets/Barre/home.png" alt="Icon Ecran d'acc"> <span>Ecran
-                d'accueil</span> </a>
-        <a href="#"><img src="./assets/Barre/diversity.png" alt="Icon maps"> <span>Equipes</span> </a>
-        <a href="#"><img src="./assets/Barre/share.png" alt="Icon maps"> <span>Reseaux Sociaux</span> </a>
+        <a href="#" class="accueil"><img src="./assets/Barre/home.png" alt="Icon Ecran d'acc"> <span>Ecran d'accueil</span></a>
+        <a href="#bas_page"><img src="./assets/Barre/diversity.png" alt="Icon Equipe"> <span>Equipes</span> </a>
+        <a href="#"><img src="./assets/Barre/share.png" alt="Icon Reseaux"> <span>Reseaux Sociaux</span> </a>
     </div>
 
     <div class="titre">
@@ -183,7 +182,10 @@
         <span>Equipe</span>
     </div>
 
+
     <div class="photo">
+        <!--Encre pour le bas de la page-->
+        <div id="bas_page"></div>
         <div class="image_SAM"> 
             <div><img src="assets/Team/SAM1.png" alt="Girl in a cercle"><p> Chef de Projet : Célia </p></div>
             <div><img src="assets/Team/SAM2.png" alt="Girl in a cercle"><p> Collaboratrice : Chloé </p></div>
